--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         }
     }
     buildTypes.each {
-        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', "\"xxxxxxxxx\""
+        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', "\"xxxx\""
     }
     productFlavors {
     }
